# amazing_v2

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_parser.py  maze.txt  output_writer.py  pyproject.toml  visualizer.py
mazegen/: __init__.py  mazegenrate.py  writer.py
mazegen_src/: mazegen.py
