[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable Python maze generator module"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["maze", "generator", "algorithm"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen_src*"]

[tool.setuptools.package-dir]
"mazegen" = "mazegen_src"